--- a/CursoArquitetura/DemoDi/Views/Shared/_Layout.cshtml
+++ b/CursoArquitetura/DemoDi/Views/Shared/_Layout.cshtml
@@ -17,9 +17,12 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">                        
+                    <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="VidaReal" asp-action="Index">Vida Real</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Lifecycle" asp-action="Index">Ciclo de Vida</a>                            
                         </li>
                     </ul>
                 </div>
