Exemplos de DI para Generics, ServiceLocator e FromServices

--- a/CursoArquitetura/DemoDi/Views/Shared/_Layout.cshtml
+++ b/CursoArquitetura/DemoDi/Views/Shared/_Layout.cshtml
@@ -22,7 +22,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="VidaReal" asp-action="Index">Vida Real</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Lifecycle" asp-action="Index">Ciclo de Vida</a>                            
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Lifecycle" asp-action="Index">Ciclo de Vida</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Generics" asp-action="Index">Generics</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="FromServices" asp-action="Index">FromServices</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ServiceLocator" asp-action="Index">Service Locator</a>
                         </li>
                     </ul>
                 </div>
