--- a/CursoArquitetura/DemoDi/Views/Shared/_Layout.cshtml
+++ b/CursoArquitetura/DemoDi/Views/Shared/_Layout.cshtml
@@ -33,6 +33,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ServiceLocator" asp-action="Index">Service Locator</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MultiplasClasses" asp-action="Index">Múltiplas classes <br> A</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MultiplasClasses" asp-action="ChamaB">Múltiplas classes <br> B</a>
+                        </li>
                     </ul>
                 </div>
             </div>
