Exemplo de Abstract Factory

--- a/CursoArquitetura/DesignPatterns/Views/Shared/_Layout.cshtml
+++ b/CursoArquitetura/DesignPatterns/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="AbstractFactory" asp-action="Index">Abstract Factory</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="FactoryMethod" asp-action="Index">Factory Method</a>
                         </li>
                     </ul>
                 </div>
