Exemplo de Pattern  Singleton

--- a/CursoArquitetura/DesignPatterns/Views/Shared/_Layout.cshtml
+++ b/CursoArquitetura/DesignPatterns/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="FactoryMethod" asp-action="Index">Factory Method</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Singleton" asp-action="Index">Singleton</a>
+                        </li>
                     </ul>
                 </div>
             </div>
