--- a/CursoArquitetura/DesignPatterns/Views/Shared/_Layout.cshtml
+++ b/CursoArquitetura/DesignPatterns/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Adapter" asp-action="Index">Adapter</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Facade" asp-action="Index">Facade</a>
+                        </li>
                     </ul>
                 </div>
             </div>
