--- a/CursoArquitetura/DesignPatterns/Views/Shared/_Layout.cshtml
+++ b/CursoArquitetura/DesignPatterns/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Composite" asp-action="Index">Composite</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Behavioral" asp-action="Index">Behavioral</a>
+                        </li>
                     </ul>
                 </div>
             </div>
