--- a/CursoArquitetura/DesignPatterns/Views/Shared/_Layout.cshtml
+++ b/CursoArquitetura/DesignPatterns/Views/Shared/_Layout.cshtml
@@ -37,7 +37,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Composite" asp-action="Index">Composite</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Behavioral" asp-action="Index">Behavioral</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Command" asp-action="Index">Command</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Strategy" asp-action="Index">Strategy</a>
                         </li>
                     </ul>
                 </div>
